Tue Nov 27 17:41:30 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Install the schema file.

	* libgnomeui.schemas: Add a scheme entry
	for show-icons, hopefully resulting with this defaulting
	to on.

	* gnome-app.c (gnome_app_instance_init): Ref/sink 
	app->layout.

	* gnome-app-helper.c (do_ui_signal_connect): Use a standard
	signal connection and a thunk to implement the "relay_func"
	feature, rather the (no longer present) marshaller feature
	of gtk_signal_connect_full().

	* gnome-popup-menu.c (pop_connect_func): Use a thunk rather than
	the (no longer present) marshaller feature of
	gtk_signal_connect_full().

2001-11-26  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-app-helper.c: remove gtk_item_factory_add_foreign()

2001-11-22  Mark McLoughlin  <mark@skynet.ie>

	* gnome-app.c: (gnome_app_set_menus), (gnome_app_add_toolbar):
	update for gtk_accel_groups_from_acceleratable to
	gtk_accel_groups_from_object.

Tue Nov 20 16:12:09 2001  Owen Taylor  <otaylor@redhat.com>

	* libgnomeuiP.h: Remove excess gobject/* include.

Sun Nov 18 2001  Miles Lane <miles@megapathdsl.net>

	* libgnomeui/Makefile.am: replace <gobject/genums.h>
	  with <glib-object.h> due to the addition of an #error into
	  genums.h that specifies that only glib-object.h should
	  be included directly.  This patch fixes the build.
	  Approved by Michael.

Sun Nov 18 14:31:59 2001  George Lebl <jirka@5z.com>

	* gnome-icon-sel.c, gnome-mdi.c: Get rid of GTK_OBJECT_DESTROYED
	  usage.  The code was very very broken in those cases anyway
	  actually.

	* gnome_segv.c: use g_find_program_in_path instead of
	  gnome_is_program_in_path

Fri Nov 16 02:06:32 2001  George Lebl <jirka@5z.com>

	* gnome-file-entry.c: change order of includes to make this compile
	  yet again

2001-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-href.c: Fix a typo.
	
2001-11-14  Michael Meeks  <michael@ximian.com>

	* gnome-app-helper.c (gnome_save_accels):
	gtk_accel_map_save instead of dump_rc.